# butterfly_garden

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CODEX_TASKS.md  DATA_MODEL.md  FRONTEND_STRATEGY.md  MVP_PLAN.md  OPEN_NOTEBOOK_EXPERIMENT.md  PRIVACY_SECURITY.md  SYNC_DESIGN_NOTES.md  schema.sql
docs/adr/: 0001-canonical-core-multiple-surfaces.md
prompts/: AGENT_INSTRUCTIONS.md  codex_plan_prompt.md  extract_concepts_v1.md  extract_summary_v1.md  extract_timeline_v1.md
samples/obsidian-poc/: README.md
samples/obsidian-poc/00 Home/: Butterfly Garden Home.md
samples/obsidian-poc/10 Conversations/: 2026-06-20 - Consciousness and Tension.mock.md  2026-06-21 - Translator Conflict Game.mock.md  2026-06-23 - Butterfly Graph Planning.mock.md
samples/obsidian-poc/20 Concepts/: AI Burnout.md  Activation Energy.md  Harmony Universe.md  Locality of Observation.md  Meta Neural Network.md
samples/obsidian-poc/30 Projects/: Butterfly Graph.md  Game of Conscious Life.md  Translator Game.md
samples/obsidian-poc/40 Echoes/: Echo - Childhood Hum to Consciousness.md  Echo - Communication Anger to Translator.md  Echo Index.md
samples/obsidian-poc/50 Timeline/: Personal Timeline.md
samples/obsidian-poc/60 Butterflies/: Weekend Build Candidates.md  (+1 more)
src/butterfly_graph/: cli.py  config.py  constants.py  hashing.py  models.py  storage.py  text.py  timeutils.py
templates/obsidian/: concept_note.md  timeline_event.md
tests/: test_chatgpt_importer.py  test_hashing.py  test_text.py
tests/fixtures/: chatgpt_conversations.json
(+11 files in other folders)
