[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "butterfly-graph"
version = "0.1.0"
description = "Local-first personal archive, concept graph, and Obsidian exporter."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "beautifulsoup4>=4.12",
  "requests>=2.32"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
butterfly = "butterfly_graph.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
